# lucosmsbot

./: .env.example  .replit  README.md  ReadMe.md  config.py  main.py  pyproject.toml  replit.md  requirements.txt
bot/: advanced_commands.py  api_client.py  commands.py  gemini_ai.py  handlers.py  keep_alive.py  menus.py  payments.py  telegram_scraper.py  utils.py  youtube_downloader.py
