[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "beautifulsoup4>=4.13.4",
    "google-genai>=1.2.0",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.1",
    "python-telegram-bot==20.8",
    "requests>=2.32.4",
    "telegram>=0.0.1",
    "telethon>=1.40.0",
    "trafilatura>=2.0.0",
    "yt-dlp>=2025.6.25",
]
